bert_layer_dcct_int8_pack_systolic_array_HLS.prj/vivado_hls.log

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.2.1 (64-bit)
  **** SW Build 2729669 on Thu Dec  5 04:48:12 MST 2019
  **** IP Build 2729494 on Thu Dec  5 07:38:25 MST 2019
    ** Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.

source /opt/xilinx/Xilinx_Vivado_vitis_2019.2/Vivado/2019.2/scripts/vivado_hls/hls.tcl -notrace
INFO: Applying HLS Y2K22 patch v1.2 for IP revision
INFO: [HLS 200-10] Running '/opt/xilinx/Xilinx_Vivado_vitis_2019.2/Vivado/2019.2/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'jz2292' on host 'en-ec-zhang-21.coecis.cornell.edu' (Linux_x86_64 version 3.10.0-1160.76.1.el7.x86_64) on Thu Sep 07 04:16:33 EDT 2023
INFO: [HLS 200-10] On os "CentOS Linux release 7.9.2009 (Core)"
INFO: [HLS 200-10] In directory '/home/jz2292/project/transformer/heterocl_file/bert_layer_dcct_int8_pack_systolic_array_HLS.prj'
Sourcing Tcl script 'run.tcl'
INFO: [HLS 200-10] Opening and resetting project '/home/jz2292/project/transformer/heterocl_file/bert_layer_dcct_int8_pack_systolic_array_HLS.prj/out.prj'.
INFO: [HLS 200-10] Adding design file 'bert_layer.h' to the project
INFO: [HLS 200-10] Adding design file 'bert_layer.cpp' to the project
INFO: [HLS 200-10] Adding design file 'gemm_systolic_array.cpp' to the project
INFO: [HLS 200-10] Adding design file 'systolic_array.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'bert_layer_tb.cpp' to the project
INFO: [HLS 200-10] Opening and resetting solution '/home/jz2292/project/transformer/heterocl_file/bert_layer_dcct_int8_pack_systolic_array_HLS.prj/out.prj/solution1'.
INFO: [HLS 200-10] Cleaning up the solution database.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'systolic_array.cpp' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from systolic_array.cpp:1:
In file included from systolic_array.cpp:1:
./bert_layer.h:31:137: error: use of undeclared identifier 'C_drainer'
void systolic_array_k_768(hls::stream<int8_t> A_loader[block_size1], hls::stream<int8_t> B_loader[block_size1], hls::stream<ap_int<44>> C_drainer[block_size1]);
                                                                                                                                        ^
./bert_layer.h:31:160: error: type name requires a specifier or qualifier
void systolic_array_k_768(hls::stream<int8_t> A_loader[block_size1], hls::stream<int8_t> B_loader[block_size1], hls::stream<ap_int<44>> C_drainer[block_size1]);
                                                                                                                                                               ^
./bert_layer.h:31:160: error: expected ')'
./bert_layer.h:31:26: note: to match this '('
void systolic_array_k_768(hls::stream<int8_t> A_loader[block_size1], hls::stream<int8_t> B_loader[block_size1], hls::stream<ap_int<44>> C_drainer[block_size1]);
                         ^
./bert_layer.h:33:138: error: use of undeclared identifier 'C_drainer'
void systolic_array_k_3072(hls::stream<int8_t> A_loader[block_size1], hls::stream<int8_t> B_loader[block_size1], hls::stream<ap_int<44>> C_drainer[block_size1]);
                                                                                                                                         ^
./bert_layer.h:33:161: error: type name requires a specifier or qualifier
void systolic_array_k_3072(hls::stream<int8_t> A_loader[block_size1], hls::stream<int8_t> B_loader[block_size1], hls::stream<ap_int<44>> C_drainer[block_size1]);
                                                                                                                                                                ^
./bert_layer.h:33:161: error: expected ')'
./bert_layer.h:33:27: note: to match this '('
void systolic_array_k_3072(hls::stream<int8_t> A_loader[block_size1], hls::stream<int8_t> B_loader[block_size1], hls::stream<ap_int<44>> C_drainer[block_size1]);
                          ^
./bert_layer.h:35:136: error: use of undeclared identifier 'C_drainer'
void systolic_array_k_64(hls::stream<int8_t> A_loader[block_size2], hls::stream<int8_t> B_loader[block_size2], hls::stream<ap_int<22>> C_drainer[block_size2]);
                                                                                                                                       ^
./bert_layer.h:35:159: error: type name requires a specifier or qualifier
void systolic_array_k_64(hls::stream<int8_t> A_loader[block_size2], hls::stream<int8_t> B_loader[block_size2], hls::stream<ap_int<22>> C_drainer[block_size2]);
                                                                                                                                                              ^
./bert_layer.h:35:159: error: expected ')'
./bert_layer.h:35:25: note: to match this '('
void systolic_array_k_64(hls::stream<int8_t> A_loader[block_size2], hls::stream<int8_t> B_loader[block_size2], hls::stream<ap_int<22>> C_drainer[block_size2]);
                        ^
./bert_layer.h:37:136: error: use of undeclared identifier 'C_drainer'
void systolic_array_k_12(hls::stream<int8_t> A_loader[block_size2], hls::stream<int8_t> B_loader[block_size2], hls::stream<ap_int<22>> C_drainer[block_size2]);
                                                                                                                                       ^
./bert_layer.h:37:159: error: type name requires a specifier or qualifier
void systolic_array_k_12(hls::stream<int8_t> A_loader[block_size2], hls::stream<int8_t> B_loader[block_size2], hls::stream<ap_int<22>> C_drainer[block_size2]);
                                                                                                                                                              ^
./bert_layer.h:37:159: error: expected ')'
./bert_layer.h:37:25: note: to match this '('
void systolic_array_k_12(hls::stream<int8_t> A_loader[block_size2], hls::stream<int8_t> B_loader[block_size2], hls::stream<ap_int<22>> C_drainer[block_size2]);
                        ^
In file included from systolic_array.cpp:1:
systolic_array.cpp:11:25: error: called object type 'int' is not a function or function pointer
  ap_int<26> pack_b = (b(7, 4), ap_uint<22>(0)) + ap_int<26>(b(3, 0));
                       ~^
systolic_array.cpp:11:63: error: called object type 'int' is not a function or function pointer
  ap_int<26> pack_b = (b(7, 4), ap_uint<22>(0)) + ap_int<26>(b(3, 0));
                                                             ~^
systolic_array.cpp:34:30: error: use of undeclared identifier 'C_drainer'
     hls::stream<ap_int<44>> C_drainer[block_size1]) {
                             ^
systolic_array.cpp:233:2: error: type name requires a specifier or qualifier
}
 ^
systolic_array.cpp:233:2: error: expected ')'
systolic_array.cpp:32:26: note: to match this '('
void systolic_array_k_768(hls::stream<int8_t> A_loader[block_size1],
                         ^
systolic_array.cpp:233:2: error: expected function body after function declarator
}
 ^
18 errors generated.
Failed during preprocessing.
    while executing
"source run.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel \#0 [list source $arg] "

INFO: [Common 17-206] Exiting vivado_hls at Thu Sep  7 04:16:45 2023...
